--- a/src/Sass/Interface.scss
+++ b/src/Sass/Interface.scss
@@ -8,6 +8,7 @@
 }
 
 .ProgressBar-Wrapper {
+  width: 150px;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -80,4 +81,61 @@ button {
 
 .reset-button:hover img {
   animation: rotateAnimation 1s linear infinite;
+}
+.reset-modal-button img {
+  transition: transform 0.5s ease;
+}
+
+.reset-modal-button:hover img {
+  animation: rotateAnimation 1s linear infinite;
+}
+.Timer {
+  display: flex;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 15px;
+  padding: 10px;
+  background-color: #222;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  color: #fff;
+
+  h3 {
+    margin: 0 0 5px 0;
+    font-size: 14px;
+    color: #f1f1f1;
+  }
+
+  .Timer-Display {
+    font-size: 24px;
+    font-weight: bold;
+    color: #ff6347;
+    padding: 5px 10px;
+    background: #111;
+    border-radius: 5px;
+    border: 2px solid #ff6347;
+    width: 80px;
+    text-align: center;
+  }
+}
+
+.show-modal-button {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #45a049;
+  }
 }
