--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
 * {
+  font-family: 'Libre Franklin', sans-serif;
+  font-weight: 800;
   user-select: none;
 }
