--- a/client/src/Sass/SettingsPage.scss
+++ b/client/src/Sass/SettingsPage.scss
@@ -66,6 +66,7 @@
   
   .modal-content {
     background: #fff;
+    color: #f9b700;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
