--- a/client/src/Sass/SettingsPage.scss
+++ b/client/src/Sass/SettingsPage.scss
@@ -51,33 +51,44 @@
       opacity: 0; /* Кнопка исчезает */
     }
   }
+
   .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .modal-content {
-    background: #fff;
-    color: #f9b700;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 240px;
+    height: 254px;
+    padding: 0 15px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 12px;
+    background: #fff;
+    border-radius: 20px;
   }
-  
-  .modal-content h2 {
-    margin-bottom: 15px;
+
+  .modal > * {
+    margin: 0;
   }
-  
-  .modal-input {
+
+  .modal__title {
+    font-size: 23px;
+    font-weight: 900;
+    color: #333;
+  }
+
+  .modal__content {
+    font-size: 13px;
+    line-height: 18px;
+    color: #333;
+  }
+
+  .modal__form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .modal__form input {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
     font-weight: 500;
     font-size: .8vw;
@@ -92,34 +103,16 @@
     transition: .4s;
   }
 
-  .modal-input:hover {
-    box-shadow: 0 0 0 .15vw rgba(135, 207, 235, 0.186);
+  .modal__form button {
+    border: 0;
+    background: #111;
+    color: #fff;
+    padding: 0.68em;
+    border-radius: 14px;
+    font-weight: bold;
   }
 
-  .modal-input:focus {
-    box-shadow: 0 0 0 .15vw skyblue;
-  }
-  
-  .modal-buttons {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .modal-buttons button {
-    padding: 10px 20px;
-    margin: 0 5px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .modal-buttons button:first-child {
-    background-color: #007bff;
-    color: white;
-  }
-  
-  .modal-buttons button:last-child {
-    background-color: #ccc;
-    color: black;
-  }
+  .modal__sign-up:hover {
+    opacity: 0.8;
+  } 
 }
