--- a/client/src/Sass/SettingsPage.scss
+++ b/client/src/Sass/SettingsPage.scss
@@ -52,6 +52,19 @@
     }
   }
 
+  .modal__backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
   .modal {
     width: 240px;
     height: 254px;
@@ -93,6 +106,7 @@
     font-weight: 500;
     font-size: .8vw;
     color: #fff;
+    cursor: pointer;
     background-color: rgb(28,28,30);
     box-shadow: 0 0 .4vw rgba(0,0,0,0.5), 0 0 0 .15vw transparent;
     border-radius: 0.4vw;
