--- a/client/src/Sass/SettingsPage.scss
+++ b/client/src/Sass/SettingsPage.scss
@@ -104,7 +104,7 @@
   .modal__form input {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
     font-weight: 500;
-    font-size: .8vw;
+    font-size: .12px;
     color: #fff;
     background-color: rgb(28,28,30);
     box-shadow: 0 0 .4vw rgba(0,0,0,0.5), 0 0 0 .15vw transparent;
