--- a/client/src/Sass/LoginGoogleButton.scss
+++ b/client/src/Sass/LoginGoogleButton.scss
@@ -1,223 +1,310 @@
 .button {
-  z-index: 2;
-  backface-visibility: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 50px;
-  font-weight: bold;
-  position: relative;
-  overflow: hidden;
-  border-radius: 35px;
-  border: solid black 2px;
-  outline: none;
-  cursor: pointer;
-  background-color: white;
+	z-index: 2;
+	backface-visibility: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 200px;
+	height: 50px;
+	font-weight: bold;
+	position: relative;
+	overflow: hidden;
+	border-radius: 35px;
+	border: solid black 2px;
+	outline: none;
+	cursor: pointer;
+	background-color: white;
 }
 
 .svg {
-  shape-rendering: geometricPrecision;
-  image-rendering: optimizeQuality;
-  vector-effect: non-scaling-stroke;
-  height: 25px;
-  margin-right: 10px;
+	shape-rendering: geometricPrecision;
+	image-rendering: optimizeQuality;
+	vector-effect: non-scaling-stroke;
+	height: 25px;
+	margin-right: 10px;
 }
 
 .button .text {
-  z-index: 10;
-  font-size: 14px;
+	z-index: 10;
+	font-size: 14px;
 }
 
 .button:hover .text {
-  animation: text forwards 0.3s;
-  color: white;
+	animation: text forwards 0.3s;
+	color: white;
 }
 
 @keyframes text {
-  from {
-    color: black;
-  }
+	from {
+		color: black;
+	}
 
-  to {
-    color: white;
-  }
+	to {
+		color: white;
+	}
 }
 
 .svg {
-  z-index: 6;
+	z-index: 6;
 }
 
 .button:hover::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 9%;
-  transform: translate(-50%, -50%);
-  width: 0;
-  height: 0;
-  opacity: 0;
-  border-radius: 300px;
-  animation: wave1 2.5s ease-in-out forwards;
+	content: '';
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 9%;
+	transform: translate(-50%, -50%);
+	width: 0;
+	height: 0;
+	opacity: 0;
+	border-radius: 300px;
+	animation: wave1 2.5s ease-in-out forwards;
 }
 
 .button:hover::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 9%;
-  transform: translate(-50%, -50%);
-  width: 0;
-  height: 0;
-  opacity: 0;
-  border-radius: 300px;
-  animation: wave2 2.5s ease-in-out forwards;
+	content: '';
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 9%;
+	transform: translate(-50%, -50%);
+	width: 0;
+	height: 0;
+	opacity: 0;
+	border-radius: 300px;
+	animation: wave2 2.5s ease-in-out forwards;
 }
 
 @keyframes wave1 {
-  0% {
-    z-index: 1;
-    background: #EB4335;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
+	0% {
+		z-index: 1;
+		background: #eb4335;
+		width: 0;
+		height: 0;
+		opacity: 1;
+	}
 
-  1% {
-    z-index: 1;
-    background: #EB4335;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
+	1% {
+		z-index: 1;
+		background: #eb4335;
+		width: 0;
+		height: 0;
+		opacity: 1;
+	}
 
-  25% {
-    z-index: 1;
-    background: #EB4335;
-    width: 800px;
-    height: 800px;
-    opacity: 1;
-  }
+	25% {
+		z-index: 1;
+		background: #eb4335;
+		width: 800px;
+		height: 800px;
+		opacity: 1;
+	}
 
-  26% {
-    z-index: 3;
-    background: #34A853;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
+	26% {
+		z-index: 3;
+		background: #34a853;
+		width: 0;
+		height: 0;
+		opacity: 1;
+	}
 
-  50% {
-    z-index: 3;
-    background: #34A853;
-    width: 800px;
-    height: 800px;
-    opacity: 1;
-  }
+	50% {
+		z-index: 3;
+		background: #34a853;
+		width: 800px;
+		height: 800px;
+		opacity: 1;
+	}
 
-  70% {
-    z-index: 3;
-    background: #34A853;
-    width: 800px;
-    height: 800px;
-    opacity: 1;
-  }
+	70% {
+		z-index: 3;
+		background: #34a853;
+		width: 800px;
+		height: 800px;
+		opacity: 1;
+	}
 
-  100% {
-    z-index: 3;
-    background: #34A853;
-    width: 800px;
-    height: 800px;
-    opacity: 1;
-  }
+	100% {
+		z-index: 3;
+		background: #34a853;
+		width: 800px;
+		height: 800px;
+		opacity: 1;
+	}
 }
 
 @keyframes wave2 {
-  0% {
-    z-index: 2;
-    background: #FBBC05;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
+	0% {
+		z-index: 2;
+		background: #fbbc05;
+		width: 0;
+		height: 0;
+		opacity: 1;
+	}
 
-  11% {
-    z-index: 2;
-    background: #FBBC05;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
+	11% {
+		z-index: 2;
+		background: #fbbc05;
+		width: 0;
+		height: 0;
+		opacity: 1;
+	}
 
-  35% {
-    z-index: 2;
-    background: #FBBC05;
-    width: 800px;
-    height: 800px;
-    opacity: 1;
-  }
+	35% {
+		z-index: 2;
+		background: #fbbc05;
+		width: 800px;
+		height: 800px;
+		opacity: 1;
+	}
 
-  39% {
-    z-index: 2;
-    background: #FBBC05;
-    width: 800px;
-    height: 800px;
-    opacity: 1;
-  }
+	39% {
+		z-index: 2;
+		background: #fbbc05;
+		width: 800px;
+		height: 800px;
+		opacity: 1;
+	}
 
-  40% {
-    z-index: 4;
-    background: #4285F4;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
+	40% {
+		z-index: 4;
+		background: #4285f4;
+		width: 0;
+		height: 0;
+		opacity: 1;
+	}
 
-  64% {
-    z-index: 4;
-    background: #4285F4;
-    width: 800px;
-    height: 800px;
-    opacity: 1;
-  }
+	64% {
+		z-index: 4;
+		background: #4285f4;
+		width: 800px;
+		height: 800px;
+		opacity: 1;
+	}
 
-  100% {
-    z-index: 4;
-    background: #4285F4;
-    width: 800px;
-    height: 800px;
-    opacity: 1;
-  }
+	100% {
+		z-index: 4;
+		background: #4285f4;
+		width: 800px;
+		height: 800px;
+		opacity: 1;
+	}
 }
 
 .button:hover .red {
-  animation: disappear 0.1s forwards;
-  animation-delay: 0.1s;
+	animation: disappear 0.1s forwards;
+	animation-delay: 0.1s;
 }
 
 .button:hover .yellow {
-  animation: disappear 0.1s forwards;
-  animation-delay: 0.3s;
+	animation: disappear 0.1s forwards;
+	animation-delay: 0.3s;
 }
 
 .button:hover .green {
-  animation: disappear 0.1s forwards;
-  animation-delay: 0.7s;
+	animation: disappear 0.1s forwards;
+	animation-delay: 0.7s;
 }
 
 .button:hover .blue {
-  animation: disappear 0.1s forwards;
-  animation-delay: 1.1s;
+	animation: disappear 0.1s forwards;
+	animation-delay: 1.1s;
 }
 
 @keyframes disappear {
-  from {
-    filter: brightness(1);
-  }
+	from {
+		filter: brightness(1);
+	}
 
-  to {
-    filter: brightness(100);
-  }
+	to {
+		filter: brightness(100);
+	}
+}
+
+.modal__backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.7);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
+}
+
+.modal {
+	width: 240px;
+	height: 254px;
+	padding: 0 15px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	gap: 12px;
+	background: #fff;
+	border-radius: 20px;
+}
+
+.modal > * {
+	margin: 0;
+}
+
+.modal__title {
+	font-size: 23px;
+	font-weight: 900;
+	color: #333;
+}
+
+.modal__content {
+	font-size: 13px;
+	line-height: 18px;
+	color: #333;
+}
+
+.modal__form {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.modal__form input {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	font-weight: 500;
+	font-size: 14px;
+	align-items: center;
+	color: #fff;
+	background-color: rgb(28, 28, 30);
+	box-shadow: 0 0 0.4vw rgba(0, 0, 0, 0.5), 0 0 0 0.15vw transparent;
+	border-radius: 6px;
+	border: none;
+	outline: none;
+	padding: 0.4vw;
+	max-width: 190px;
+	transition: 0.4s;
+}
+
+.modal__form button {
+	border: 0;
+	background: #111;
+	color: #fff;
+	padding: 0.68em;
+	border-radius: 14px;
+	font-weight: bold;
+}
+
+.modal__sign-up:hover {
+	opacity: 0.8;
+}
+
+.notifications {
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	z-index: 1001;
 }
