--- a/client/src/Sass/LoginGoogleButton.scss
+++ b/client/src/Sass/LoginGoogleButton.scss
@@ -232,10 +232,11 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 1000;
+	z-index: 9999;
 }
 
 .modal {
+	position: relative;
 	width: 240px;
 	height: 254px;
 	padding: 0 15px;
@@ -247,6 +248,7 @@
 	gap: 12px;
 	background: #fff;
 	border-radius: 20px;
+	z-index: 10000;
 }
 
 .modal > * {
@@ -307,4 +309,9 @@
 	top: 20px;
 	right: 20px;
 	z-index: 1001;
+}
+
+.google-login-container {
+	position: relative;
+	z-index: 9998;
 }
