--- a/client/src/Sass/LevelsPage.scss
+++ b/client/src/Sass/LevelsPage.scss
@@ -98,6 +98,35 @@
 		flex-direction: column;
 		align-items: center;
 		gap: 15px;
+		margin: 20px;
+
+		@media (max-width: 480px) {
+			padding: 15px;
+			margin: 10px;
+			width: 95%;
+
+			h2 {
+				font-size: 20px;
+			}
+
+			.level-screenshot {
+				height: 150px;
+			}
+
+			p {
+				font-size: 12px;
+			}
+
+			.buttons-container {
+				flex-direction: column;
+				width: 100%;
+
+				button {
+					width: 100%;
+					padding: 12px;
+				}
+			}
+		}
 
 		h2 {
 			color: #f9b700;
