--- a/client/src/Sass/LevelStarsModal.scss
+++ b/client/src/Sass/LevelStarsModal.scss
@@ -4,7 +4,7 @@
 	padding: 20px 25px;
 	width: 100%;
 	border: 1px solid #f9b700;
-	margin: 35px 0;
+	margin: 35px 40px;
 
 	.achievements-list {
 		display: flex;
@@ -61,7 +61,7 @@
 @media (max-width: 480px) {
 	.modal-stars-container {
 		padding: 15px 20px;
-		margin: 35px 0;
+		margin: 35px 20px;
 	}
 
 	.modal-content {
