--- a/client/src/Sass/Interface.scss
+++ b/client/src/Sass/Interface.scss
@@ -96,6 +96,7 @@
 	.reset-button:hover img {
 		animation: rotateAnimation 1s linear infinite;
 	}
+
 	.reset-modal-button img {
 		transition: transform 0.5s ease;
 	}
@@ -420,6 +421,35 @@
 			font-size: 0.9em;
 			text-align: center;
 			margin: 0;
+		}
+	}
+
+	.modal-buttons {
+		display: flex;
+		justify-content: center;
+		gap: 20px;
+		margin-top: 10px;
+
+		.interface-button {
+			position: static;
+			width: 50px;
+			height: 50px;
+			background-color: #ff6347;
+
+			&:hover {
+				background-color: #ff4500;
+				transform: scale(1.1);
+			}
+
+			&:active {
+				background-color: #e63946;
+				transform: scale(1);
+			}
+
+			img {
+				width: 24px;
+				height: 24px;
+			}
 		}
 	}
 }
